tests/NormalTests/paczka1/fuzzy1/67389410.err
Error in line 8: A419 A526 -1,6
Error in line 2: XMURn4EL4Qo A526 5,2
Error in line 12: XMURn4EL4Qo S439 32,9
Error in line 7: A419 A526 35,1
Error in line 21: YWnlqhSv A419 65,8
Error in line 23: A419 A419 83,8
